# doc-simplifier-back

./: .gitignore  docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/documents/: models.py  serializers.py  urls.py  views.py
src/documents/migrations/: 0001_initial.py  0002_contractmodel_remove_fopmodel_atp_docs_and_more.py  0003_alter_businessentitiesmodel_gender.py
src/documents/services/docx/: utils.py
src/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_date_joined_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py
